2007-04-16  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-util.c: Provide a better 'decrypt
    failed' error message. Fixes bug #355062
    
2007-04-16  Nate Nielsen  <nielsen@memberwebs.com>

    * data/seahorse.schemas.in: 
    * libseahorse/seahorse-context.c:
    * libseahorse/seahorse-gconf.h:
    * libseahorse/seahorse-prefs.glade: Add option to disable 
    auto-retrieval from key servers. See bug #366798
    
2007-04-16  Nate Nielsen  <nielsen@memberwebs.com>

    * Merged changes from gnome-2-18 branch. (r1654 - r1729)

2007-04-15  Adam Schreiber  <sadam@clemson.edu>
    
    * plugins/epiphany/seahorse-extension.c: Fix problem with context
    menu items always appearing.

2007-04-13  Nate Nielsen  <nielsen@memberwebs.com>

    * plugins/nautilus/seahorse.xml: Recognize encrypted private
    keys properly. Fixes bug #429509

2007-04-07  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/Makefile.am: Set proper binary as setuid. 
    Fixes bug #427586
    
2007-04-07  Nate Nielsen  <nielsen@memberwebs.com>

    * configure.in: Bump version number

2007-04-07  Nate Nielsen  <nielsen@memberwebs.com>

    * INSTALL:
    * NEWS:
    * README: Seahorse version 1.0.1

2007-04-07  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-ssh-key-data.c: 
    * libseahorse/seahorse-util.c:
    * plugins/nautilus/seahorse.xml: Enable importing of plain SSH
    keys, generated elsewhere. Fixes bug #424473
    
2007-04-06  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-widget.c: Make 'Keyserver Results' window help
    work properly. Patch from Adam Schreiber. Fixes bug #421615
    
2007-04-06  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-ldap-source.c: Make progress bar pulse 
    properly during an LDAP search. Fixes bug #355850
    
2007-04-06  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-ldap-source.c: 