@@ -1,3 +1,10 @@
+2007-04-24  Adam Schreiber  <sadam@clemson.edu>
+
+    * libseahorse/seahorse-ssh-operation.c: Escaping already provides 
+    single quotes to comment string
+    * src/seahorse-ssh-generate.c: Choose 1024 bits when DSA is selected.
+    Fixes bug #419227
+
 2007-04-16  Nate Nielsen  <nielsen@memberwebs.com>
 
     * libseahorse/seahorse-util.c: Provide a better 'decrypt
